# jarvis

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  vercel.json
.github/workflows/: deploy.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: base.py  chat_agent.py  coding_agent.py  orchestrator.py  research_agent.py  vision_agent.py
backend/app/api/v1/: admin.py  analytics.py  auth.py  automation.py  chat.py  coding.py  knowledge.py  memory.py  notifications.py  plugins.py  research.py  router.py  users.py  vision.py  voice.py
backend/app/automation/: actions.py  engine.py  triggers.py
backend/app/core/: cache.py  config.py  database.py  dependencies.py  events.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
backend/app/knowledge/: extractor.py  graph.py
backend/app/memory/: memory_manager.py  vector_store.py
backend/app/models/: __init__.py  automation.py  base.py  conversation.py  knowledge.py  memory.py  message.py  notification.py  plugin.py  research.py  user.py
backend/app/plugins/: base.py  registry.py
backend/app/plugins/builtin/: calendar_plugin.py  github_plugin.py  gmail_plugin.py  weather_plugin.py
backend/app/schemas/: auth.py  automation.py  chat.py  memory.py  plugin.py  user.py  vision.py  voice.py
backend/app/services/: analytics_service.py  auth_service.py  automation_service.py  chat_service.py  coding_service.py  knowledge_service.py  memory_service.py  mock_ai_client.py  notification_service.py  plugin_service.py  research_service.py  user_service.py  vision_service.py  voice_service.py
backend/app/utils/: file.py  rate_limiter.py  text.py  web.py
backend/app/vision/: analyzer.py
backend/app/voice/: synthesizer.py  transcriber.py
deployment/: Makefile  backend.service  vercel.json
deployment/nginx/: nginx.conf  ssl.conf
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  PLUGIN_DEV.md  SECURITY.md
frontend/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/analytics/: analytics-chart.tsx  stat-card.tsx
frontend/src/components/automation/: automation-builder.tsx  automation-card.tsx
frontend/src/components/chat/: chat-input.tsx  chat-interface.tsx  chat-message.tsx  chat-sidebar.tsx  streaming-text.tsx  thinking-animation.tsx
frontend/src/components/knowledge/: knowledge-card.tsx  knowledge-graph.tsx
frontend/src/components/layout/: app-shell.tsx  auth-layout.tsx  sidebar.tsx  topbar.tsx
frontend/src/components/memory/: memory-card.tsx  memory-search.tsx
frontend/src/components/particles/: particle-background.tsx  particles-bg.tsx
frontend/src/hooks/: use-auth.ts  use-click-outside.ts  use-intersection-observer.ts  use-keyboard.ts  use-media-query.ts  use-stream.ts  use-system-monitor.ts  use-voice.ts  use-websocket.ts
frontend/src/lib/: api.ts  constants.ts  query-client.ts  utils.ts
frontend/src/stores/: app-store.ts  auth-store.ts  automation-store.ts  chat-store.ts  knowledge-store.ts  memory-store.ts  notification-store.ts  settings-store.ts  ui-store.ts  voice-store.ts
frontend/src/styles/: globals.css  theme.ts
frontend/src/types/: chat.ts  index.ts  vision.ts  voice.ts
scripts/: backup.sh  seed.py  setup.ps1  setup.sh
(+48 files in other folders)
