[project]
name = "jarvis-x-backend"
version = "1.0.0"
description = "JARVIS X - AI Operating System Backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "JARVIS X Team", email = "team@jarvisx.ai" },
]

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0",
    "alembic>=1.13.0,<2.0",
    "asyncpg>=0.29.0,<1.0",
    "aiosqlite>=0.20.0,<1.0",
    "redis[hiredis]>=5.1.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "websockets>=12.0,<13.0",
    "openai>=1.30.0,<2.0",
    "langchain>=0.2.0,<1.0",
    "langchain-openai>=0.1.0,<1.0",
    "langchain-community>=0.2.0,<1.0",
    "celery>=5.4.0,<6.0",
    "boto3>=1.34.0,<2.0",
    "Pillow>=10.3.0,<11.0",
    "python-dotenv>=1.0.0,<2.0",
    "jinja2>=3.1.0,<4.0",
    "pyyaml>=6.0.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.4.0,<1.0",
    "mypy>=1.10.0,<2.0",
    "pre-commit>=3.7.0,<4.0",
    "faker>=25.0.0,<26.0",
    "factory-boy>=3.3.0,<4.0",
    "aiosqlite>=0.20.0,<1.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff ──────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes, pycodestyle warnings
    "I",              # isort
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "SIM",            # flake8-simplify
    "ARG",            # flake8-unused-arguments
    "RUF",            # ruff-specific rules
]
ignore = [
    "E501",           # line too long (handled by formatter)
    "B904",           # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ── MyPy ──────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
